--- a/Config/config.json
+++ b/Config/config.json
@@ -36,6 +36,7 @@
         "Caissa",
         "Illumina",
         "Stockfish",
+        "Reckless",
         "Clarity",
         "Anura",
         "Clover",
