--- a/Config/config.json
+++ b/Config/config.json
@@ -32,6 +32,7 @@
         "Serendipity",
         "Spaghet",
         "Berserk",
+        "vine",
         "Quanticade",
         "Schoenemann",
         "Caissa",
