--- a/Config/config.json
+++ b/Config/config.json
@@ -32,7 +32,7 @@
         "Serendipity",
         "Spaghet",
         "Berserk",
-        "vine",
+        "Vine",
         "Quanticade",
         "Schoenemann",
         "Caissa",
