--- a/Config/config.json
+++ b/Config/config.json
@@ -22,6 +22,7 @@
         "UHO_4060_vT.epd",
         "UHO_Lichess_4852_v1.epd",
         "fortresses_150_250.epd"
+		"Vondele.epd"
     ],
 
     "engines" : [
