add config for pawnocchio

--- a/Config/config.json
+++ b/Config/config.json
@@ -43,6 +43,7 @@
         "Clarity",
         "Anura",
         "Clover",
-        "Stormphrax"
+        "Stormphrax",
+        "Pawnocchio"
     ]
 }
